--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@
   background: transparent;
 }
 
-nav {
+/*nav {
   width: 100%;
   position: fixed;
   z-index: 99;
-}
+}*/
 
-.navbar {
+/*.navbar {
   height: 40px;
   width: 100%;
   background-color:lightgray;
@@ -29,6 +29,90 @@ nav {
   justify-content: flex-start;
   align-items: left;
   font-family: 'Roboto Condensed', sans-serif;
+}*/
+
+/*.navbar-item {
+  color: #0077B5;
+  text-decoration: none;
+  align-self: center;
+  padding: 0 10px;
+}*/
+
+nav {
+  width: 100%;
+  position: fixed;
+  z-index: 9;
+  background-color:lightgray;
+  /*height: 40px;*/
+  padding: 10px;
+  box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+nav ul {
+  display: none;
+}
+
+nav select {
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+.navbar {
+  /*height: 40px;*/
+  /*width: 100%;*/
+  /*background-color:lightgray;*/
+  /*box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);*/
+
+  /*margin: 0px 0px;*/
+  /*display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: left;*/
+
+  /*font-family: 'Roboto Condensed', sans-serif;*/
 }
 
 .navbar-item {
@@ -79,6 +163,10 @@ nav {
  margin-top: 30px;
 }
 
+.icons a {
+  text-decoration: none;
+}
+
 .fa:hover {
   transform: scale(1.3);
 }
@@ -102,12 +190,6 @@ nav {
   color: red;
 }
 
-.github, 
-.linkedin,
-.twitter {
-  color: white
-}
-
 #about {
   background-color: #F5F5F5;
   padding-bottom: 50px;
@@ -120,12 +202,18 @@ nav {
   padding-bottom: 30px;
 }
 
-.about-title {
+.about-title,
+.portfolio-title,
+.skills-title,
+.contact-title {
   color: #5F3B3B;
-  /*font: 3em 'Oxygen', sans-serif;*/
-  font: 1.8em 'Oxygen', sans-serif;
+  font: 1.5em 'Oxygen', sans-serif;
   text-align: center;
   padding: 60px 0 10px;
+}
+
+.contact-title {
+  color: white;
 }
 
 .about-polaroid {
@@ -133,6 +221,7 @@ nav {
   width: 220px;
   transform: rotate(-2deg);
   float: left;
+  margin: 0 20px 20px 0;
 }
  
 .about-polaroid img {
@@ -148,17 +237,16 @@ nav {
   position: absolute;
   text-align: center;
   width: 100%;
-  bottom: 0px;
+  bottom: 10px;
   color: black;
-  font-family: 'Permanent Marker', cursive;
+  font: .5em 'Permanent Marker', cursive;
 }
 
 #about-para {
   margin: 40px 10px 0;
   padding: 20px 10px;
   background-color: white;
-  font: 1.0em 'Hind Siliguri', sans-serif;
-  /*font: 1.5em 'Hind Siliguri', sans-serif;*/
+  font: .75em 'Hind Siliguri', sans-serif;
   text-align: left;
 }
 
@@ -181,13 +269,6 @@ nav {
   margin: auto;
 }
 
-.portfolio-title {
-  font: 1.8em 'Oxygen', sans-serif;
-  color: #5F3B3B;
-  text-align: center;
-  padding: 60px 0 10px 0;
-}
-
 .portfolio-projects {
   display: flex;
   flex-flow: row wrap;
@@ -202,11 +283,15 @@ nav {
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);
 }
 
+.portfolio-item a {
+  text-decoration: none;
+}
+
 .portfolio-image {
   max-width: 450px;
 }
 
-.portfollio-button {
+.portfolio-button {
   color: white;
   background-color: lightseagreen;
   margin-top: 40px;
@@ -216,7 +301,7 @@ nav {
 
 #skills {
   background-color: #F5F5F5;
-  height: 800px;
+  padding-bottom: 50px;
 }
 
 .skills-wrapper {
@@ -225,11 +310,9 @@ nav {
   margin: auto;
 }
 
-.skills-title {
-  font: 1.8em 'Oxygen', sans-serif;
-  color: #5F3B3B;
-  text-align: center;
-  padding: 60px 0 10px 0;
+.skills-container {
+  display: flex;
+  flex-flow: column;
 }
 
 #skills-json {
@@ -255,7 +338,6 @@ nav {
   height: 100px;
 }
 
-
 .skill-logos {
   display: flex;
   flex-flow: row wrap;
@@ -280,7 +362,7 @@ code {
 
 #contact {
   background-color: black;
-  height: 400px;
+  padding-bottom: 50px;
 }
 
 .contact-wrapper {
@@ -289,62 +371,53 @@ code {
   margin: auto;
 }
 
-.contact-title {
-  font: 1.8em 'Oxygen', sans-serif;
-  color: white;
-  text-align: center;
-  padding: 60px 0 10px;
-}
-
 .contact-info {
   margin-top: 30px;
 }
 
-.contact-email {
-  font: 1.0em 'Oxygen', sans-serif;
+.contact-email,
+.contact-phone {
+  font: .6em 'Oxygen', sans-serif;
   color: white;
   text-decoration: none;
 }
 
-.contact-phone {
-  font: 1.0em 'Oxygen', sans-serif;
+.contact-email:hover {
+  color: red;
+}
+
+.contact-icons-2x {
+    display: none;
+}
+
+.github, 
+.linkedin,
+.twitter {
   color: white;
 }
 
-#intro-title {
-  animation-duration: 4s;
-  animation-name: slideInTitle;
-}
-
-@keyframes slideInTitle {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-#intro-statement {
-  animation-duration: 5s;
-  animation-name: slidein;
-}
-
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%; 
-  }
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
+.github:hover, 
+.linkedin:hover,
+.twitter:hover {
+  color: red;
 }
 
 /************************************/
 /***            Tablet            ***/
 /************************************/
 @media screen and (min-width: 545px) {
+
+  nav select {
+    display: none;
+  }
+
+  nav ul {
+    display: inline-block;
+  }
+
+  /*.dropdown {
+    display: none;
+  }*/
 
   #intro-name {
     font: bold 3.5em 'Marcellus SC', serif;
@@ -367,11 +440,16 @@ code {
   #about-para {
     margin: 40px 80px 0;
     padding: 20px 50px;
+    font: 1.5em 'Hind Siliguri', sans-serif;
+  }
+
+  .about-polaroid p {
+    font: 1em 'Permanent Marker', cursive;
   }
 
   .about-title,
   .portfolio-title,
-  .skills-title 
+  .skills-title, 
   .contact-title {
     font: 3em 'Oxygen', sans-serif;
   }
@@ -384,20 +462,52 @@ code {
     font: 1.3em monospace;
   }
 
-  .contact-email {
-    font: 1.4em 'Oxygen', sans-serif;
-  }
-
+  .contact-email,
   .contact-phone {
     font: 1.4em 'Oxygen', sans-serif;
   }
-}
 
+  .contact-icons {
+    display: none;
+  }
+
+  .contact-icons-2x {
+    display: inline;
+  }
+}
 
 /************************************/
 /**            Desktop            ***/
 /************************************/
 @media screen and (min-width: 769px) {
 
+  #intro-title {
+    animation-duration: 4s;
+    animation-name: slideInTitle;
+  }
 
+  @keyframes slideInTitle {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  #intro-statement {
+    animation-duration: 5s;
+    animation-name: slidein;
+  }
+
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%; 
+    }
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
 }
