--- a/css/style.css
+++ b/css/style.css
@@ -12,44 +12,17 @@
   background: transparent;
 }
 
-/*nav {
-  width: 100%;
-  position: fixed;
-  z-index: 99;
-}*/
-
-/*.navbar {
-  height: 40px;
-  width: 100%;
-  background-color:lightgray;
-  box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);
-  margin: 0px 0px;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: left;
-  font-family: 'Roboto Condensed', sans-serif;
-}*/
-
-/*.navbar-item {
-  color: #0077B5;
-  text-decoration: none;
-  align-self: center;
-  padding: 0 10px;
-}*/
-
 nav {
   width: 100%;
   position: fixed;
   z-index: 9;
   background-color:lightgray;
-  /*height: 40px;*/
   padding: 10px;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-nav ul {
+nav ul li {
   display: none;
 }
 
@@ -57,72 +30,16 @@ nav select {
   display: inline-block;
 }
 
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 8px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  margin: 0 auto;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-}
-
-.navbar {
-  /*height: 40px;*/
-  /*width: 100%;*/
-  /*background-color:lightgray;*/
-  /*box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);*/
-
-  /*margin: 0px 0px;*/
-  /*display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: left;*/
-
-  /*font-family: 'Roboto Condensed', sans-serif;*/
-}
-
-.navbar-item {
+nav ul li a,
+nav select {
   color: #0077B5;
   text-decoration: none;
   align-self: center;
   padding: 0 10px;
 }
  
-.navbar-item:hover {
+nav ul li a:hover,
+nav select option:hover {
   color: blue;
 }
 
@@ -287,6 +204,11 @@ nav select {
   text-decoration: none;
 }
 
+.portfolio-item-title {
+  font-size: 1.5em;
+  padding: 5px;
+}
+
 .portfolio-image {
   max-width: 450px;
 }
@@ -322,20 +244,9 @@ nav select {
   margin-top: 20px;
 }
 
-#js,
-#bootstrap {
-  width: 130px;
-  height: 130px;
-}
-
-#nodejs {
-  width: 150px;
-  height: 100px;
-}
-
-#npm {
-  width: 150px;
-  height: 100px;
+.skill-logos i {
+  font-size: 5em;
+  padding: 30px;
 }
 
 .skill-logos {
@@ -408,16 +319,12 @@ code {
 @media screen and (min-width: 545px) {
 
   nav select {
-    display: none;
+    display: none; 
   }
 
-  nav ul {
-    display: inline-block;
+  nav ul li {
+    display: inline;
   }
-
-  /*.dropdown {
-    display: none;
-  }*/
 
   #intro-name {
     font: bold 3.5em 'Marcellus SC', serif;
