--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ nav select option:hover {
 }
 
 .portfolio-wrapper {
-  width: 80%;
+  width: 100%;
   text-align: center;
   margin: auto;
 }
@@ -194,8 +194,8 @@ nav select option:hover {
 
 .portfolio-item {
   width: 500px;
-  height: 400px;
-  margin: 10px;
+  /*height: 400px;*/
+  margin: 5px;
   background-color: #F5F5F5;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);
 }
@@ -205,20 +205,26 @@ nav select option:hover {
 }
 
 .portfolio-item-title {
-  font-size: 1.5em;
-  padding: 5px;
+  font: .75em 'Roboto Condensed', sans-serif;
+  padding: 10px;
 }
 
 .portfolio-image {
-  max-width: 450px;
+  max-width: 350px;
+}
+
+.portfolio-button-wrapper {
+  margin: 20px;
 }
 
 .portfolio-button {
   color: white;
   background-color: lightseagreen;
-  margin-top: 40px;
+  border-radius: 45px;
+  /*margin: 50px 0;*/
   padding: 10px;
   text-decoration: none;
+  font: .5em 'Roboto', sans-serif;
 }
 
 #skills {
@@ -245,8 +251,8 @@ nav select option:hover {
 }
 
 .skill-logos i {
-  font-size: 5em;
-  padding: 30px;
+  font-size: 2em;
+  padding: 20px;
 }
 
 .skill-logos {
@@ -260,7 +266,7 @@ nav select option:hover {
   padding: 20px;
 }
 
-pre {
+/*pre {
   border: 1px solid black;
   border-radius: 5px;
   background-color: black;
@@ -269,7 +275,7 @@ pre {
 
 code {
   font: .75em monospace;
-}
+}*/
 
 #contact {
   background-color: black;
@@ -361,12 +367,42 @@ code {
     font: 3em 'Oxygen', sans-serif;
   }
 
+  .portfolio-wrapper {
+    width: 80%;
+  }
+
+.portfolio-item {
+  width: 500px;
+  /*height: 400px;*/
+  margin: 10px;
+  /*background-color: #F5F5F5;
+  box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);*/
+}
+
+  .portfolio-item-title {
+    font: 1.5em 'Roboto', sans-serif;
+    padding: 10px;
+  }
+
+  .portfolio-image {
+    max-width: 450px;
+  }
+
+  .portfolio-button {
+    font: 1em 'Roboto', sans-serif;
+  }
+
   #skills-json {
     padding-left: 50px;
   }
 
-  code {
+  /*code {
     font: 1.3em monospace;
+  }*/
+
+  .skill-logos i {
+    font-size: 5em;
+    padding: 30px;
   }
 
   .contact-email,
