--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,10 @@ nav select option:hover {
 #intro {
   text-align: center;
   height: 100%;
-  /*margin-bottom: 300px;*/
 }
 
 #intro-name {
   font: bold 1.5em 'Roboto', sans-serif;
-  /*font: 3.5em 'Ramabhadra', sans-serif;*/
   color: #0077B5;
   padding-top: 60px;
 }
@@ -93,15 +91,14 @@ nav select option:hover {
   margin: 25px;
 }
 
-/*.fa-github */
 #github {
   color: #24292E;
   margin: 25px;
 }
 
 .fa-twitter {
-  margin: 25px;
   color: #1DA1F2;
+  margin: 25px;
 }
 
 .fa-envelope {
@@ -120,14 +117,16 @@ nav select option:hover {
   padding-bottom: 30px;
 }
 
+.pdf {
+  color: red;
+}
+
 .about-title,
 .portfolio-title,
 .skills-title,
 .contact-title {
-  /*color: #5F3B3B;*/
   color: #0077B5;
   font: 1.5em 'Roboto', sans-serif;
-  /*font: 1.5em 'Oxygen', sans-serif;*/
   text-align: center;
   padding: 60px 0 10px;
 }
@@ -167,8 +166,26 @@ nav select option:hover {
   padding: 20px 10px;
   background-color: white;
   font: .75em 'Roboto', sans-serif;
-  /*font: .75em 'Hind Siliguri', sans-serif;*/
   text-align: left;
+}
+
+#resume {
+  clear: left;
+  text-align: center;
+  margin: auto;
+  width: 90%;
+  padding-top: 10px;
+}
+
+#resume a {
+  font: 1em 'Roboto', sans-serif;
+  text-decoration: none;
+  margin: auto;
+  color: black;
+}
+
+#resume a:hover {
+  color: red;
 }
 
 .logos-edu {
@@ -198,7 +215,6 @@ nav select option:hover {
 
 .portfolio-item {
   width: 500px;
-  /*height: 400px;*/
   margin: 5px;
   background-color: #F5F5F5;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);
@@ -219,6 +235,12 @@ nav select option:hover {
 
 .portfolio-button-wrapper {
   margin: 20px;
+  text-align: left;
+}
+
+.tech-used {
+  padding: 10px;
+  font: 1.2em 'Roboto Condensed', sans-serif;
 }
 
 #skills {
@@ -271,7 +293,6 @@ nav select option:hover {
 .contact-email,
 .contact-phone {
   font: .6em 'Roboto', sans-serif;
-  /*font: .6em 'Oxygen', sans-serif;*/
   color: white;
   text-decoration: none;
 }
@@ -281,7 +302,7 @@ nav select option:hover {
 }
 
 .contact-icons-2x {
-    display: none;
+  display: none;
 }
 
 .github, 
@@ -311,30 +332,33 @@ nav select option:hover {
 
   #intro-name {
     font: bold 4em 'Roboto', sans-serif;
-    /*font: bold 3.5em 'Marcellus SC', serif;*/
-    /*font: 3.5em 'Ramabhadra', sans-serif;*/
     padding-top: 250px;
   }
 
   #intro-title {
     font: bold 2em 'Roboto Condensed', sans-serif;
-    /*font: bold 2.0em 'Marcellus SC', serif;*/
   }
 
   #intro-statement {
     font: bold 1.5em 'Roboto Condensed', sans-serif;
-    /*font: bold 1.5em 'Marcellus SC', serif;*/
   }
 
   .about-wrapper {
     width: 80%;
   }
 
+  #resume {
+  width: 80%;
+}
+
+#resume a {
+  font: 1.5em 'Roboto', sans-serif;
+}
+
   #about-para {
     margin: 40px 80px 0;
     padding: 20px 50px;
     font: 1.5em 'Roboto', sans-serif;
-    /*font: 1.5em 'Hind Siliguri', sans-serif;*/
   }
 
   .about-polaroid p {
@@ -346,7 +370,6 @@ nav select option:hover {
   .skills-title, 
   .contact-title {
     font: 3em 'Roboto', sans-serif;
-    /*font: 3em 'Oxygen', sans-serif;*/
   }
 
   .portfolio-wrapper {
@@ -355,10 +378,7 @@ nav select option:hover {
 
 .portfolio-item {
   width: 500px;
-  /*height: 400px;*/
   margin: 10px;
-  /*background-color: #F5F5F5;
-  box-shadow: 0 3px 5px rgba(100, 100, 100, 0.49);*/
 }
 
   .portfolio-item-title {
@@ -371,8 +391,7 @@ nav select option:hover {
   }
 
   .portfolio-image:hover {
-    /*border: 5px so green;*/
-    box-shadow: 10px 10px 15px rgba(100, 100, 100, 0.49);*
+    box-shadow: 10px 10px 15px rgba(100, 100, 100, 0.49);
   }
 
   .skill-logos i {
@@ -383,7 +402,6 @@ nav select option:hover {
   .contact-email,
   .contact-phone {
     font: 1.4em 'Roboto', sans-serif;
-    /*font: 1.4em 'Oxygen', sans-serif;*/
   }
 
   .contact-icons {
