--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 *, *:before, *:after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 * {
@@ -83,7 +84,9 @@ nav select option:hover {
 }
 
 .fa:hover {
-  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .fa-linkedin-square {
@@ -138,9 +141,11 @@ nav select option:hover {
 .about-polaroid {
   position: relative;
   width: 220px;
-  transform: rotate(-2deg);
   float: left;
   margin: 0 20px 20px 0;
+  -webkit-transform: rotate(-2deg);
+      -ms-transform: rotate(-2deg);
+          transform: rotate(-2deg);
 }
  
 .about-polaroid img {
@@ -419,8 +424,10 @@ nav select option:hover {
 @media screen and (min-width: 769px) {
 
   #intro-title {
-    animation-duration: 4s;
-    animation-name: slideInTitle;
+    -webkit-animation-duration: 4s;
+            animation-duration: 4s;
+    -webkit-animation-name: slideInTitle;
+            animation-name: slideInTitle;
   }
 
   @keyframes slideInTitle {
@@ -433,8 +440,10 @@ nav select option:hover {
   }
 
   #intro-statement {
-    animation-duration: 5s;
-    animation-name: slidein;
+    -webkit-animation-duration: 5s;
+            animation-duration: 5s;
+    -webkit-animation-name: slidein;
+            animation-name: slidein;
   }
 
   @keyframes slidein {
